test/testdata/nil/not_indexable_assignment_error.lox
nil[0] = 0; // error: 'nil' value is not indexable
